[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"

# 设置可以debug以及低优化等级
[profile.release]
debug = true
opt-level = 0
# debug = false
# opt-level = 2